# Kataglyphis-CMakeTemplate

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile.in  README.md  gcovr.cfg  pyproject.toml  requirements.txt
.github/actions/cleanup-disk-space/: action.yml
.github/actions/install-deps/: action.yml
.github/workflows/: Linux.yml  Linux_arm.yml  Linux_x86.yml  Windows.yml  linux_run.yml  linux_run_arm.yml  linux_run_x86.yml  windows_run.yml
ExternalLib/: CMakeLists.txt
Resources/: AppxManifest.xml.template  example.json  example.toml
Src/: CMakeLists.txt  KataglyphisCppProject.ixx  KataglyphisCppProjectConfig.hpp.in  KataglyphisCppProjectConfig.ixx  KataglyphisCppProjectConfig.ixx.in  KataglyphisCppProject_Resources.ixx  Main.cpp  flags.cc
Src/resources/: example.toml
Src/rusty_code/: Cargo.toml  build.rs
Src/rusty_code/.cargo/: config.toml
Src/rusty_code/src/: lib.rs
Test/cmake/: CommonTestBuild.cmake
Test/commit/: CMakeLists.txt  commitSuite.cpp  test_rust_integration.cpp
Test/compile/: CMakeLists.txt  compileSuite.cpp  testResourceReader.cpp
Test/fuzz/: CMakeLists.txt  dummy_windows.cpp
Test/perf/: CMakeLists.txt  perfResourceReader.cpp  perfSuite.cpp
cmake/: BuildTypeHelpers.cmake  CPackOptions.cmake  Cache.cmake  CompilerConfigHelpers.cmake  CompilerDetection.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  MSVCRuntimeConfig.cmake  ProjectOptions.cmake  RustOptions.cmake  Sanitizers.cmake  Speedup.cmake  StaticAnalyzers.cmake  SystemLibDependencies.cmake  TargetHelpers.cmake  Tests.cmake
docs/: test_results.xml
docs/coverage/: index.html
docs/coverage/coverage/home/jones/GitHub/Kataglyphis-CMakeTemplate/Test/compile/: compileSuite.cpp.html
docs/packaging/: KataglyphisCppProject.appdata.xml  KataglyphisCppProject.desktop
docs/source/: conf.py  getting-started.rst  graphviz_files.rst  graphviz_generator.py  index.rst  introduction.rst
docs/source/api/: define_KataglyphisCppProjectConfig_8hpp_1a04547974aab6616742b970a38eb6999c.rst  define_KataglyphisCppProjectConfig_8hpp_1aa79a25802dd9a53936ba8b734ad8a44c.rst  define_KataglyphisCppProjectConfig_8hpp_1aa98b688897d8e82a300ab44d239ee739.rst  define_KataglyphisCppProjectConfig_8hpp_1ae5fd0d014b1a581c0473ae3e826ff1ab.rst  dir_Src.rst  dir__home_bigjuicyjones_Kataglyphis-CMakeTemplate_docs_source.rst  dir_docs.rst  file_Src_KataglyphisCppProjectConfig.hpp.rst  file_Src_Main.cpp.rst  file_docs_source_conf.py.rst  file_view_hierarchy.rst.include  function_Main_8cpp_1abd2d87a111808f88d8f31d5c331c7a1f.rst  function_Main_8cpp_1ae66f6b31b5ad750f1fe042a706a4e3d4.rst  library_root.rst  namespace_conf.rst  page_index.rst.include  program_listing_file_README.md.rst  program_listing_file_Src_KataglyphisCppProjectConfig.hpp.rst  program_listing_file_Src_Main.cpp.rst  program_listing_file_docs_source_conf.py.rst  unabridged_api.rst.include  unabridged_orphan.rst  variable_namespaceconf_1a05f7acd354f09362b4fa8f2abdfa1b54.rst  variable_namespaceconf_1a160404b83fa0b5b708e09a9d1e52f294.rst  variable_namespaceconf_1a325dc746d8bf05c54d26351c35a21d90.rst  variable_namespaceconf_1a33fa97cf51dcb25970fbf53f10159589.rst  variable_namespaceconf_1a45653c983098153b78e33600e39230eb.rst  variable_namespaceconf_1a637c239d256432248aa8d9f3ab0b8c52.rst  variable_namespaceconf_1a6c3bfcc1a44546c1c75ce20f55bd0fd6.rst  variable_namespaceconf_1a6eba2d2c7ae923054b1c49e686ec89b9.rst  variable_namespaceconf_1a6f28557bb41c23eaa415a2476682af3e.rst  variable_namespaceconf_1a7ad48fb6f3e9b129c02346ea0d3527c1.rst  variable_namespaceconf_1acb47d2c0c2904fa7d36b63142533f383.rst  variable_namespaceconf_1ae475e080536acb271a0a0efe56c3ba42.rst  variable_namespaceconf_1ae850ae634911b713e036b43894fdd525.rst  variable_namespaceconf_1aeaafa42217d24810edc9b116b88a4585.rst  variable_namespaceconf_1af4fb5d8851ccaade135c2668dd3ced41.rst
docs/source/test-results/: index.rst
scripts/: prepare_tooling.sh
scripts/Windows/: setup-dependencies.ps1
scripts/linux/: build_docs_convert_results.sh  build_test_coverage_analyzers.sh  profiling_perf_bench.sh  release_package_callgrind.sh  run_clang_tools.sh  run_static_analysis.sh  run_static_analysis_format.sh  setup-dependencies.sh  setup_dependencies.sh
scripts/linux/lib/: common.sh
scripts/windows/: Build-Windows.config.psd1  Build-Windows.ps1  Run-Debug.ps1  Run-Profile.ps1  Run-Release.ps1  build-windows.ps1  cargo-retry.cmd  run-cargo-debug.ps1  run-cargo-rustc-debug.ps1  setup-dependencies.ps1  setup_dependencies.ps1
scripts/windows/modules/: Build.CMake.psm1  Build.Formatting.psm1  Build.Packaging.psm1  Build.Testing.psm1
